vlib/v/checker/tests/generic_type_name_in_non_generic_function.vv
fn main() {
	c := u8(`D`)
	if c >= A && c <= Z {
		println('yes')
	} else {
		println('no')
	}
}
